methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:-9: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugTracking of type ()Boolean
and  method isFacingTrail in class SlugTracking of type ()Boolean
match argument types () and expected result type Boolean
			if (isFacingTrail()) {
                            ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
                              if (!estFaceMur()) 
                              ^SlugTracking:17: error: type mismatch;
 found   : Unit
 required: Boolean
                              if (!estFaceMur()) 
                              ^SlugTracking:25: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugTracking of type ()Boolean
and  method isFacingTrail in class SlugTracking of type ()Boolean
match argument types () and expected result type Boolean
while (!estSurBiscuit()) {if (isFacingTrail()) {avance();}
                              ^SlugTracking:16: error: method isFacingTrail is defined twice
  conflicting symbols both originated in file 'plm.runtime2.SlugTracking'
def isFacingTrail():Boolean = {//var test:Boolean = estFaceMur(); 
    ^